fix: heading spacing

--- a/_includes/css/global.css
+++ b/_includes/css/global.css
@@ -59,6 +59,7 @@
 
   & h2 {
     margin: 0;
+    margin-bottom: 2rem;
   }
 
   & ul {
