--- a/_includes/css/reset.css
+++ b/_includes/css/reset.css
@@ -143,6 +143,7 @@ h3,
 h4,
 h5,
 h6 {
+  line-height: normal;
   font-family: var(--font-family-title);
   color: var(--venom);
   font-weight: 100;
